--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b5ac82">  <td>24/08/26 17:14:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
   <td>main@550147359</td>   <td></td> </tr>
-<tr bgcolor="b5ac82">  <td>24/08/26 17:14:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
   <td>main@550147359</td>   <td></td> </tr>
-<tr bgcolor="b5ac82">  <td>24/08/26 17:14:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
   <td>main@550147359</td>   <td></td> </tr>
-<tr bgcolor="b5ac82">  <td>24/08/26 17:13:17</td>   <td>-46057</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">runScenario</td> 
+  <td>main@550147359</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/08/30 17:43:40</td>   <td>-361665</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRunner.testRunner_smoke@14028087]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@550147359</td>   <td></td> </tr>
-<tr bgcolor="b5ac82">  <td>24/08/26 17:14:16</td>   <td>12925</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRunner.testRunner_smoke@14028087]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="b5ac82">  <td>24/08/30 17:49:42</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRunner.testRunner_smoke@14028087]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@550147359</td>   <td></td> </tr>
 </table>
